# fit2gpx-rs

./: .gitignore  Cargo.toml  README.md  rundumadum.fit
.github/workflows/: rust.yml  text.yml
examples/: cli.rs  demo.rs
src/: args.rs  elevation.rs  fit.rs  lib.rs  main.rs  utils.rs
