[package]
name = "fit2gpx"
version = "0.6.0"
edition = "2021"

authors = ["Jeromos Kovács <iitsnotme214@proton.me>"]
description = ".fit to .gpx converter"
keywords = ["garmin", "fit", "cli", "gpx"]
categories = ["command-line-interface", "science::geo"]
repository = "https://github.com/jeromeschmied/fit2gpx-rs"
license = "MIT"
exclude = ["*.fit"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.27", features = ["derive", "env"] }
env_logger = "0.11.6"
fit_file = "0.6.0"
geo-types = "0.7.15"
gpx = "0.10.0"
log = "0.4.25"
rayon = "1.10.0"
srtm_reader = { version = "0.5.1", optional = true }
time = { version = "0.3.39", default-features = false }

[features]
default = ["elevation"]
elevation = ["dep:srtm_reader"]
